# WebLens

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTION.md  LICENSE  Makefile  README.md  debug_test.py  environment.yml  integration_test_changes.md  login_test_quickstart.sh  progress_report.md  pyproject.toml  quick_start.sh  requirements.txt  run_examples.sh  setup.sh  simple_test.py  test_example.py  weblens_cli.py  weblens_cli.py.bak
.gemini/: styleguide.md
docs/: THAY_DOI.md  browser_use_cloud_api.md  login_testing_guide.md  natural_language_approach.md  natural_language_enhancements.md  natural_language_guide_full.md  natural_language_testing.md
examples/: advanced_natural_assertions.py  advanced_natural_language_test.py  advanced_tests.py  basic_tests.py  cloud_test.py  direct_browser_use.py  login_test_example.py  natural_language_test.py
src/services/browser_use/: __init__.py  constants.py  legacy.py
src/services/browser_use/api/: __init__.py  client.py
src/services/browser_use/controllers/: __init__.py  account_manager.py  batch_task_manager.py  media_manager.py  specialized_task_creator.py  task_controller.py  task_manager.py  task_monitor.py
src/services/browser_use/examples/: __init__.py  account_examples.py  (+1 more)
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_browser_manager.py  test_core.py
weblens/: __init__.py  config.py
weblens/core/: __init__.py  browser_manager.py  test_runner.py
weblens/profiles/: __init__.py  profile_manager.py
weblens/utils/: __init__.py  helpers.py  logger.py
(+6 files in other folders)
