[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weblens"
version = "0.1.0"
description = "Advanced web testing framework using browser-use for multi-profile browser automation"
authors = [{name = "Paul Pham", email = "paulpham157@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "browser-use>=0.2.0",
    "playwright>=1.40.0",
    "asyncio-throttle>=1.0.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
